Set correct cursor for album covers

--- a/src/static/css/player.css
+++ b/src/static/css/player.css
@@ -405,6 +405,14 @@ body.light #loading-overlay {
     pointer-events: none;
 }
 
+.search-result-album {
+    display: inline-block;
+    margin: .5rem;
+    height: 8rem;
+    width: 8rem;
+    border-radius: var(--border-radius-amount);
+    cursor: pointer;
+}
 
 /* For some reason, ::-webkit-slider-thumb and ::-moz-range-thumb cannot be in the same selector (comma separated), or Chrome loses styling */
 
